--- a/Secure Mobile Communication/ECC/bin/AndroidManifest.xml
+++ b/Secure Mobile Communication/ECC/bin/AndroidManifest.xml
@@ -24,6 +24,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity  
+         android:name="com.example.ecc.SendMessage"  
+         android:screenOrientation="portrait" />
+        
+        <activity  
+         android:name="com.example.ecc.ReciveMessage"  
+         android:screenOrientation="portrait" />
+        
+        <activity  
+         android:name="com.example.ecc.OnetimePasswordInput"  
+         android:screenOrientation="portrait" />
+        
     </application>
 
 </manifest>
