Created sms Reciver and sender. Updaed ui

--- a/Secure Mobile Communication/.project
+++ b/Secure Mobile Communication/.project
@@ -3,6 +3,7 @@
 	<name>ECC</name>
 	<comment></comment>
 	<projects>
+		<project>SecureDistributedSystem</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
