--- a/Secure Mobile Communication/AndroidManifest.xml
+++ b/Secure Mobile Communication/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:targetSdkVersion="18" />
     
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>
+	<uses-permission android:name="android.permission.READ_SMS" />
+	<uses-permission android:name="android.permission.SEND_SMS" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -36,6 +41,12 @@
         <activity  
          android:name="com.example.ecc.OnetimePasswordInput"  
          android:screenOrientation="portrait" />
+        
+        <receiver android:name=".SMSReciver">   
+     		<intent-filter android:priority="999">
+         		<action android:name="android.provider.Telephony.SMS_RECEIVED" />
+     		</intent-filter>
+ 		</receiver>
         
     </application>
 
