--- a/Secure Mobile Communication/AndroidManifest.xml
+++ b/Secure Mobile Communication/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
+        android:name="com.example.ecc.ClientApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
