--- a/Secure Mobile Communication/bin/AndroidManifest.xml
+++ b/Secure Mobile Communication/bin/AndroidManifest.xml
@@ -36,14 +36,14 @@
          android:screenOrientation="portrait" />
         
         <activity  
-         android:name="com.example.ecc.ReciveMessage"  
+         android:name=".ReceiveMessage"
          android:screenOrientation="portrait" />
         
         <activity  
          android:name="com.example.ecc.OnetimePasswordInput"  
          android:screenOrientation="portrait" />
         
-        <receiver android:name=".SMSReciver">   
+        <receiver android:name=".SMSReceiver">
      		<intent-filter android:priority="999">
          		<action android:name="android.provider.Telephony.SMS_RECEIVED" />
      		</intent-filter>
